# NJAU-it-

./: CMakeLists.txt  README.md  addition.cpp  calculate.h  checkInput.cpp  checkInput.h  division.cpp  main.c  multiplication.cpp  start.h  subtraction.cpp
